--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "signals",
   "version": "1.0.0",
   "description": "Creating a signals, values over time library to consume a callback and array",
-  "main": "src/Signal.coffee",
+  "main": "src/signal.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
     "bluebird": "^2.10.1",
+    "browserify": "^11.2.0",
     "lodash": "^3.10.1"
   },
   "devDependencies": {
-    "mocha": "^2.3.3",
+    "babel": "^5.8.23",
+    "babelify": "^6.3.0",
     "chai": "^3.3.0",
-    "coffee-script": "^1.10.0"
+    "coffee-script": "^1.10.0",
+    "mocha": "^2.3.3"
   },
   "scripts": {
-    "test": "mocha -w --compilers coffee:coffee-script/register"
+    "test": "mocha -w --compilers coffee:coffee-script/register,js:babel/register",
+    "build": "browserify src/signal.js -x lodash -t babelify --outfile dist/signal.js"
   },
   "author": "",
   "license": "ISC"
