--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "babel": "^5.8.23",
+    "babel-runtime": "^5.8.25",
     "babelify": "^6.3.0",
     "chai": "^3.3.0",
     "coffee-script": "^1.10.0",
@@ -20,7 +21,7 @@
   },
   "scripts": {
     "test": "mocha -w --compilers coffee:coffee-script/register,js:babel/register",
-    "build": "browserify src/signal.js -s signal -x lodash -t babelify --outfile dist/signal.js"
+    "build": "browserify src/signal.js -s signal -t [ babelify --optional runtime ] --outfile dist/signal.js"
   },
   "author": "",
   "license": "ISC"
