--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "test": "test"
   },
   "dependencies": {
-    "bluebird": "^2.10.1",
-    "browserify": "^11.2.0",
     "lodash": "^3.10.1"
   },
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-runtime": "^5.8.25",
     "babelify": "^6.3.0",
+    "browserify": "^11.2.0",
     "chai": "^3.3.0",
     "coffee-script": "^1.10.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "promise-polyfill": "^2.1.0"
   },
   "scripts": {
     "test": "mocha -w --compilers coffee:coffee-script/register,js:babel/register",
