--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,5 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
-    "lodash": "~3.10.1",
-    "bluebird": "~2.10.1"
-  }
+  "devDependencies": {}
 }
