--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "lodash": "^3.10.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "lodash": "^3.10.1",
     "babel": "^5.8.23",
     "babel-runtime": "^5.8.25",
     "babelify": "^6.3.0",
