--- a/package.json
+++ b/package.json
@@ -4,28 +4,16 @@
   "description": "Creating a signals, values over time library to consume a callback and array",
   "main": "dist/signal.js",
   "dependencies": {
-    "mocha": "^2.3.4"
   },
   "devDependencies": {
-    "babel": "6.1.18",
-    "babel-core": "6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
-    "babel-plugin-transform-flow-strip-types": "6.1.18",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-preset-es2015": "6.1.18",
-    "babelify": "7.2.0",
     "chai": "3.3.0",
     "lodash": "3.10.1",
     "mocha": "2.3.3",
     "path": "^0.12.7",
-    "promise-polyfill": "2.1.0",
-    "webpack": "^1.12.9"
+    "promise-polyfill": "2.1.0"
   },
   "scripts": {
-    "test": "mocha -w --compilers es6:babel-core/register",
-    "build": "webpack --config webpack.config.js",
-    "pre-publish": "npm run build"
+    "test": "mocha -w"
   },
   "author": "",
   "license": "ISC"
